crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__E101_E101.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E101 Indentation contains mixed spaces and tabs
  --> E101.py:11:1
   |
11 |       print("mixed starts with tab")
   | ^^^^^^
   |

E101 Indentation contains mixed spaces and tabs
  --> E101.py:15:1
   |
15 |                     print("mixed starts with space")
   | ^^^^^^^^^^^^^^^^^^^^
   |

E101 Indentation contains mixed spaces and tabs
  --> E101.py:19:1
   |
19 |        print("xyz");
   | ^^^^^^^
   |
