crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__E112_E11.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E112 Expected an indented block
 --> E11.py:9:1
  |
9 | print()
  | ^
  |

invalid-syntax: Expected an indented block after `if` statement
 --> E11.py:9:1
  |
9 | print()
  | ^^^^^
  |

invalid-syntax: Unexpected indentation
  --> E11.py:12:1
   |
12 |     print()
   | ^^^^
   |

invalid-syntax: Expected a statement
  --> E11.py:14:1
   |
14 | mimetype = 'application/x-directory'
   | ^
   |

E112 Expected an indented block
  --> E11.py:45:1
   |
45 | print()
   | ^
   |

invalid-syntax: Expected an indented block after `if` statement
  --> E11.py:45:1
   |
45 | print()
   | ^^^^^
   |
