crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__E115_E11.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
invalid-syntax: Expected an indented block after `if` statement
 --> E11.py:9:1
  |
9 | print()
  | ^^^^^
  |

invalid-syntax: Unexpected indentation
  --> E11.py:12:1
   |
12 |     print()
   | ^^^^
   |

invalid-syntax: Expected a statement
  --> E11.py:14:1
   |
14 | mimetype = 'application/x-directory'
   | ^
   |

E115 Expected an indented block (comment)
  --> E11.py:30:1
   |
30 | #       try:
   | ^
   |

E115 Expected an indented block (comment)
  --> E11.py:31:1
   |
31 | #           self.master.start()
   | ^
   |

E115 Expected an indented block (comment)
  --> E11.py:32:1
   |
32 | #       except MasterExit:
   | ^
   |

E115 Expected an indented block (comment)
  --> E11.py:33:1
   |
33 | #           self.shutdown()
   | ^
   |

E115 Expected an indented block (comment)
  --> E11.py:34:1
   |
34 | #       finally:
   | ^
   |

E115 Expected an indented block (comment)
  --> E11.py:35:1
   |
35 | #           sys.exit()
   | ^
   |

invalid-syntax: Expected an indented block after `if` statement
  --> E11.py:45:1
   |
45 | print()
   | ^^^^^
   |
