crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__E116_E11.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
invalid-syntax: Expected an indented block after `if` statement
 --> E11.py:9:1
  |
9 | print()
  | ^^^^^
  |

invalid-syntax: Unexpected indentation
  --> E11.py:12:1
   |
12 |     print()
   | ^^^^
   |

invalid-syntax: Expected a statement
  --> E11.py:14:1
   |
14 | mimetype = 'application/x-directory'
   | ^
   |

E116 Unexpected indentation (comment)
  --> E11.py:15:1
   |
15 |      # 'httpd/unix-directory'
   | ^^^^^
   |

E116 Unexpected indentation (comment)
  --> E11.py:22:1
   |
22 |             # self.master.start()
   | ^^^^^^^^^^^^
   |

E116 Unexpected indentation (comment)
  --> E11.py:24:1
   |
24 |             # self.shutdown()
   | ^^^^^^^^^^^^
   |

E116 Unexpected indentation (comment)
  --> E11.py:26:1
   |
26 |             # sys.exit()
   | ^^^^^^^^^^^^
   |

invalid-syntax: Expected an indented block after `if` statement
  --> E11.py:45:1
   |
45 | print()
   | ^^^^^
   |
