crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__E121_E12.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E12.py:3:3: E121 Hanging indent under-indented.
  |
1 | #: E121
2 | print "E121", (
3 |   "dent")
  |   ^^^^^^ E121
4 | 
5 | #: E121
  |

E12.py:7:4: E121 Hanging indent under-indented.
  |
5 | #: E121
6 | result = {
7 |    'key1': 'value',
  |    ^^^^^^ E121
8 |    'key2': 'value',
9 | }
  |


